# RobotArm0

./: .gitignore  CMakeLists.txt
exec/: dataCollect.cpp  detectLetter.cpp  mainTask.cpp  manipulate.cpp  markerPos.cpp  smallTests.cpp  startIt.cpp  twoJointsSimu.cpp
include/: ArucoMarker.hpp  BpNetwork.hpp  LettersClassify.hpp  NumberClassify.hpp  RsVideoCapture.hpp  UsbCAN.hpp  Wifi.hpp  control.hpp  parameters.hpp  position.hpp
src/: ArucoMarker.cpp  BpNetwork.cpp  LettersClassify.cpp  NumberClassify.cpp  RsVideoCapture.cpp  UsbCAN.cpp  Wifi.cpp  control.cpp  letter_classify.py  number_classify.py  position.cpp  tf_network.py
